# freelance-lead-gen

./: .dockerignore  .env.example  .gitignore  :memory:  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  development.md  security.md
src/freelance_lead_gen/: __init__.py  __main__.py  cli.py  cli_helpers.py  llm.py
src/freelance_lead_gen/agents/: __init__.py  filtering_agent.py  orchestrator.py  personalization_agent.py  profile_matcher.py  verification_agent.py
src/freelance_lead_gen/config/: __init__.py  prompts.py  settings.py
src/freelance_lead_gen/discovery/: __init__.py  browser.py  discovery_agent.py  extractor.py  scheduler.py
src/freelance_lead_gen/discovery/browser/: __init__.py  _client.py  _config.py  _exceptions.py  _factory.py  _models.py
src/freelance_lead_gen/discovery/browser_pkg/: __init__.py
src/freelance_lead_gen/llm/: __init__.py  client.py  exceptions.py  parsing.py  rate_limiter.py  tokenizer.py
src/freelance_lead_gen/models/: __init__.py  opportunity.py  pipeline.py  platform.py
src/freelance_lead_gen/storage/: __init__.py  database.py  migrations.py  repository.py
src/freelance_lead_gen/ui/: __init__.py  app.py  content_editor.py  dashboard.py  lead_detail.py  lead_list.py  review_queue.py  widgets.py
src/freelance_lead_gen/utils/: __init__.py  anti_ai.py  fingerprint.py  logging.py
tests/: conftest.py  mock_llm_server.py  test_cli.py  test_cli_helpers.py  test_integration.py  test_integration_pipeline.py  test_llm.py  test_models.py  test_storage.py
tests/test_agents/: __init__.py  test_filtering.py  test_orchestrator.py  test_personalization.py  test_profile_matcher.py  test_verification.py
tests/test_discovery/: __init__.py  test_browser.py  test_extractor.py  test_platforms.py  test_scheduler.py
tests/test_ui/: test_app.py
