[project]
name = "freelance-lead-gen"
version = "0.1.0"
description = "Agentic freelance lead generation system — automates discovery, qualification, and outreach preparation for technical freelance opportunities"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Josh Turin", email = "josh@turin.tech" },
]
keywords = [
    "freelance",
    "lead-generation",
    "agentic",
    "browser-automation",
    "ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "playwright>=1.40",
    "browser-use>=0.1.0",
    "playwright-stealth>=1.0",
    "openai>=1.0",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-openai>=1.1.14",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "textual>=0.52",
    "textual-plotext>=1.0",
    "apscheduler>=3.11.0",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
    "aiosqlite>=0.22.1",
    "pypdf>=5.6.0",
    "aiohttp>=3.11.0",
]

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/iknowkungfubar/freelance-lead-gen"
repository = "https://github.com/iknowkungfubar/freelance-lead-gen"
documentation = "https://github.com/iknowkungfubar/freelance-lead-gen/docs"

[project.scripts]
freelance-lead-gen = "freelance_lead_gen.cli:main"

[build-system]
requires = [
    "hatchling>=1.21",
]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "tests/",
    ".github/",
    "docs/",
    "browser_data/",
    "*.sqlite",
    "*.db",
    ".env*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D203",
    "D213",
    "D401",
    "D404",
    "D415",
    "ANN101",
    "ANN102",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN401",
    "COM812",
    "ISC001",
    "S311",
    "T201",
    "UP007",
    "EM101",
    "EM102",
    "TRY003",
    "TRY301",
    "PLR2004",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR5501",
    "PLW1510",
    "SLF001",
    "ERA001",
    "TD002",
    "TD003",
    "FBT001",
    "FBT002",
    "C408",
    "N812",
    "N999",
    "S101",
    "RET504",
    "BLE001",
    "S110",
    "S112",
    "S608",
    "S105",
    "C901",
    "E501",
    "PLC0415",
    "TRY300",
    "ARG001",
    "ARG002",
    "F821",
    "G201",
    "PERF401",
    "RUF001",
    "RUF002",
    "D205",
    "E741",
    "N802",
    "N818",
    "SIM105",
    "TC001",
    "TRY004",
    "RUF006",
    "RUF100",
    "PYI063",
    "PT013",
    "SIM117",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",
    "ANN",
    "D",
    "PLR",
    "SLF",
    "S",
    "N",
    "T201",
    "BLE001",
    "S110",
    "ARG001",
    "ARG002",
    "F821",
]
"alembic/**" = [
    "ANN",
    "D",
    "E501",
]
"conftest.py" = [
    "ANN",
    "D",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests as needing network access (deselect with '-m \"not network\"')",
    "hitl: marks tests for human-in-the-loop interface",
    "integration: marks integration tests",
    "smoke: marks smoke tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
exclude = [
    ".venv/",
    "venv/",
    "build/",
    "tests/",
    "alembic/",
]

[tool.coverage.run]
source = [
    "freelance_lead_gen",
]
omit = [
    "tests/*",
    "alembic/*",
    "**/__init__.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 20

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.1.1",
    "mypy>=1.15.0",
    "pip-audit>=2.9.0",
]
